# lite-pack

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  build_check.py  check.py  compile_flags.txt  dump.c  generic.c  lip-config.cmake.in  lite_pack-config.cmake.in  lite_pack.c  lite_pack.h  lite_pack_io.c  spec.md  test_array.c  test_bin.c  test_bool.c  test_ext.c  test_float.c  test_integer.c  test_map.c  test_nil.c  test_string.c
.github/workflows/: check.yml  cmake.yml  deploy.yml  test-io.yml  test.yml
cmake/: warnings.cmake
ext/: Makefile  lio.c  lio.h  lite_pack_io.c  lite_pack_io.h  test_io.c
include/lip/: compiler.h  config.h  endian.h  export.h  file.h  format.h  lip.h  load_bool.h  load_ext.h  load_float.h  load_int.h  object.h  pack_array.h  pack_bool.h  pack_ext.h  pack_float.h  pack_int.h  pack_map.h  pack_object.h  pack_str.h  stdio_unlocked.h  store_bool.h  store_ext.h  store_float.h  store_int.h  store_map.h  store_str.h  unpack_array.h  unpack_bool.h  unpack_ext.h  unpack_float.h  unpack_int.h  unpack_map.h  unpack_object.h  unpack_str.h
include/lip/1darray/: 1darray.h
include/lip/1darray/file/: read_float.h  read_int.h  write_float.h  write_int.h  write_int_data.h  write_int_data_in.h  write_int_item.h
include/lip/file/: file.h  read_array.h  read_bool.h  read_cstr.h  read_ext.h  read_float.h  read_int.h  read_map.h  read_object.h  read_str.h  write_array.h  write_bool.h  write_cstr.h  write_ext.h  write_float.h  write_int.h  write_map.h  write_object.h  write_str.h
include/lite_pack/: bug.h  compiler.h  config.h.in  endian.h  file.h  first_byte.h  format.h  lite_pack.h  load_bool.h  load_ext.h  load_float.h  load_int.h  load_number.h  number.h  object.h  pack_array.h  pack_bool.h  pack_ext.h  pack_float.h  pack_int.h  pack_map.h  pack_object.h  stdio_unlocked.h  store_array.h  store_bool.h  store_ext.h  store_float.h  store_int.h  store_map.h  store_number.h  store_str.h  unpack_array.h  unpack_ext.h  unpack_float.h  unpack_int.h  unpack_map.h  unpack_object.h  unpack_str.h
include/lite_pack/1darray/: 1darray.h
include/lite_pack/1darray/file/: read_float.h  read_int.h  write_float.h  write_int.h  (+3 more)
include/lite_pack/file/: file.h  read_array.h  read_bool.h  read_cstr.h  read_ext.h  read_float.h  read_int.h  read_map.h  read_object.h  read_str.h  write_array.h  write_bool.h  write_cstr.h  write_ext.h  write_float.h  write_int.h  write_map.h  write_object.h  write_str.h
src/: 1darray.c  bug.h  byteswap.h  compiler.h  ctx.h  endian.c  first_byte.c  first_byte.h  format.c  format.h  fpeek.h  lite_pack.c  lite_pack.h  load.c  load.h  load_body.h  load_bool.c  load_bool.h  load_ext.c  load_ext.h  load_float.c  load_float.h  load_int.c  load_int.h  load_number.c  load_number.h  map.h  number.h  object.c  pack.c  pack.h  pack_array.c  pack_array.h  pack_bool.c  pack_bool.h  pack_ext.c  pack_ext.h  pack_float.c  pack_float.h  pack_int.c  (+47 more)
src/1darray/: item_size.h  pack.c  pack.h  pack_float.c  pack_float.h  pack_int.c  pack_int.h  pack_int_in.c  pack_int_in.h  pack_int_inplace.c  pack_int_inplace.h  read.c  read_float.c  read_int.c  unpack.c  unpack.h  unpack_float.c  unpack_float.h  unpack_int.c  unpack_int.h  unpack_int_in.c  unpack_int_in.h  unpack_int_inplace.c  unpack_int_inplace.h  write.c  write_float.c  write_float_inplace.c  write_int.c  write_int_data.c  write_int_data_inplace.c  write_int_inplace.c
src/1darray/file/: read.c  read_float.c  read_int.c  write.c  write_float.c  write_int.c  write_int_data.c  write_int_data_in.c  write_int_data_inplace.c
src/ctx/: file_read.c  file_read_1darray.h  file_write.c  file_write_1darray.c
src/ext/: file_read_1darray.c
src/ext/1darray/: pack.c  read.c  read_float.c  read_int.c  unpack.c  write.c  write_float.c  write_float_inplace.c  write_int.c  write_int_inplace.c
src/file/: file.c  read_array.c  read_bool.c  read_cstr.c  read_ext.c  read_float.c  read_int.c  read_map.c  read_object.c  read_str.c  write_array.c  write_bool.c  write_cstr.c  write_ext.c  write_float.c  write_int.c  write_map.c  write_object.c  write_str.c
src/io/: file_read_array.c  file_read_bool.c  file_read_ext.c  file_read_float.c  file_read_int.c  file_read_map.c  file_read_str.c  file_write_array.c  file_write_bool.c  file_write_ext.c  file_write_float.c  file_write_int.c  file_write_map.c  file_write_str.c
src/io/file/: file.c  read_array.c  read_bool.c  read_ext.c  read_float.c  read_int.c  read_map.c  read_str.c  write_array.c  write_bool.c  write_ext.c  write_float.c  write_int.c  write_map.c  write_str.c
src/lite_pack/: 1darray.h  compiler.h  config.h  config.h.in  endian.h  first_byte.h  format.h  lite_pack.h  lite_pack_ndarray.h  load_bool.h  load_ext.h  load_float.h  load_int.h  load_number.h  number.h  pack_array.h  pack_bool.h  pack_ext.h  pack_float.h  pack_int.h  pack_map.h  pack_str.h  stdio.h  stdio_unlocked.h  store_array.h  store_bool.h  store_ext.h  store_float.h  store_int.h  store_map.h  store_number.h  store_str.h  unpack_array.h  unpack_bool.h  unpack_ext.h  unpack_float.h  unpack_int.h  unpack_map.h  unpack_str.h
src/lite_pack/1darray/: 1darray.h  read.h  read_float.h  read_int.h  type.h  write.h  write_float.h  write_float_inplace.h  write_int.h  write_int_data.h  write_int_data_inplace.h  write_int_inplace.h  write_int_item.h
src/lite_pack/ctx/: file.h  file_ctx.h  file_read.h  file_read_1darray.h  file_write.h  file_write_1darray.h
src/lite_pack/ext/: 1darray.h  1darray_type.h  file_write_1darray.h  pack_1darray.h  unpack_1darray.h
src/lite_pack/file/: file.h  read_float.h  read_int.h  write_float.h  write_int.h
src/lite_pack/io/: file.h  file_ctx.h  file_read_float.h  file_read_int.h  file_write_float.h  file_write_int.h
test/: 1darray.c  CMakeLists.txt  array.c  bool.c  examples.c  ext.c  ext_example.c  ext_example.h  file.c  first_byte.c  float.c  helper.c  helper.h  integer.c  integer_stress.c  io_file.c  lorem.c  lorem.h  map.c  msgpack.c  pack_int.c  pack_int.py  string.c
test/assets/: i32.txt  i64.txt  u32.txt  u64.txt
(+18 files in other folders)
